<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.wizard</groupId>
	<artifactId>wizard-ejb-client</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<name>wizard-ejb-client</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<mainClass>com.wizard.ejb.client.EjbClient</mainClass>

		<JBOSSHOME>E:\software\jboss-as-7.1.1.Final\</JBOSSHOME>

		<!-- wizard -->
		<wizard.version>1.0.0</wizard.version>

		<!-- dependency -->
		<junit.version>4.10</junit.version>

		<!-- build -->
		<java.version>1.7</java.version>
		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
		<maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
	</properties>

	<dependencies>

		<!-- wizard -->
		<dependency>
			<groupId>com.wizard</groupId>
			<artifactId>wizard-util</artifactId>
			<version>${wizard.version}</version>
		</dependency>

		<dependency>
			<groupId>com.wizard</groupId>
			<artifactId>wizard-j2ee</artifactId>
			<version>${wizard.version}</version>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- JBOSS -->
		<dependency>
			<groupId>org.jboss.ejb</groupId>
			<artifactId>client</artifactId>
			<version>1.0.5.Final</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/ejb-client/main/jboss-ejb-client-1.0.5.Final.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>logging</artifactId>
			<version>3.1.0.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/logging/main/jboss-logging-3.1.0.GA.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>ejb</artifactId>
			<version>1.0.1.Final</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/javax/ejb/api/main/jboss-ejb-api_3.1_spec-1.0.1.Final.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>marshalling</artifactId>
			<version>1.3.11.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/marshalling/main/jboss-marshalling-1.3.11.GA.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>remoting3</artifactId>
			<version>3.2.3.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/remoting3/main/jboss-remoting-3.2.3.GA.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>transaction</artifactId>
			<version>1.0.0.Final</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/javax/transaction/api/main/jboss-transaction-api_1.1_spec-1.0.0.Final.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.xnio</groupId>
			<artifactId>nio</artifactId>
			<version>3.0.3.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/xnio/nio/main/xnio-nio-3.0.3.GA.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org</groupId>
			<artifactId>xnio</artifactId>
			<version>3.0.3.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/xnio/main/xnio-api-3.0.3.GA.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>sasl</artifactId>
			<version>1.0.0.Final</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/sasl/main/jboss-sasl-1.0.0.Final.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.jboss.marshalling</groupId>
			<artifactId>river</artifactId>
			<version>1.3.11.GA</version>
			<scope>system</scope>
			<systemPath>${JBOSSHOME}/modules/org/jboss/marshalling/river/main/jboss-marshalling-river-1.3.11.GA.jar</systemPath>
		</dependency>
	</dependencies>
	<build>
		<finalName>wizard-ejb-client</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-XX:-UseSplitVerifier</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-server</argument>
						<argument>-XX:MaxPermSize=64m</argument>
						<argument>-Xms256m</argument>
						<argument>-Xmx256m</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>${mainClass}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
